--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     // ORM
     implementation 'org.springframework.data:spring-data-jdbc'
     implementation 'com.h2database:h2'
+    // security, auth
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('bootBuildImage') {
